refactor:adicionando atributo resultado